ADD: hygen to create atomic design componennts with test and index files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,6 +47,8 @@
       }
     ],
     "default-param-last": "off",
-    "implicit-arrow-linebreak": "off"
+    "implicit-arrow-linebreak": "off",
+    "import/prefer-default-export": "off",
+    "no-restricted-exports": "off"
   }
 }
