--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "test": "react-scripts test",
     "test:ci": "CI=true react-scripts test",
     "eject": "react-scripts eject",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "new:component": "hygen new component"
   },
   "eslintConfig": {
     "extends": [
@@ -61,6 +62,7 @@
     "eslint-plugin-react": "^7.27.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.4",
+    "hygen": "^6.1.0",
     "lint-staged": "^12.1.2",
     "redux-devtools-extension": "^2.13.9"
   }
