FIX: problem with storybook and tests

--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
       }
     ]
   },
+  "resolutions": {
+    "babel-loader": "8.1.0"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
