ADD: styled components and theme files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,7 +38,7 @@
       }
     ],
     "no-use-before-define": "off",
-    "@typescript-eslint/no-use-before-define": ["error"],
+    "@typescript-eslint/no-use-before-define": "off",
     "react/function-component-definition": [
       2,
       {
