--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -49,6 +49,10 @@
     "default-param-last": "off",
     "implicit-arrow-linebreak": "off",
     "import/prefer-default-export": "off",
-    "no-restricted-exports": "off"
+    "no-restricted-exports": "off",
+    "@typescript-eslint/no-unused-vars": "error",
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-shadow": ["error"],
+    "no-shadow": "off"
   }
 }
