--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
@@ -87,7 +88,6 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.4",
     "hygen": "^6.1.0",
-    "lint-staged": "^12.1.2",
-    "redux-devtools-extension": "^2.13.9"
+    "lint-staged": "^12.1.2"
   }
 }
